<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rojomarvel"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/logoMarvel"
        android:layout_width="297dp"
        android:layout_height="231dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/logomarvel"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/gorroSplash"
        android:layout_width="57dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="256dp"
        android:contentDescription="@string/gorro"
        app:layout_constraintBottom_toBottomOf="@+id/logoMarvel"
        app:layout_constraintEnd_toEndOf="@+id/logoMarvel"
        app:layout_constraintTop_toTopOf="@+id/logoMarvel"
        app:layout_constraintVertical_bias="0.253"
        app:srcCompat="@drawable/gorro" />

    <Button
        android:id="@+id/botonNext"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/push"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:strokeColor="@color/white" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ironmanDer"
        android:layout_width="94dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:src="@drawable/ironman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="ImageContrastCheck" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ironmanIzq"
        android:layout_width="94dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ironman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="ImageContrastCheck" />

    <pl.droidsonroids.gif.GifImageButton
        android:id="@+id/escudo"
        style="?attr/materialButtonStyle"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:layout_below="@+id/logoMarvel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:background="@color/rojomarvel"
        android:scaleType="fitXY"
        android:src="@drawable/splashgif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonNext"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>